--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -13,20 +13,20 @@
     <string name="person">"/Человек"</string>
     <string name="trips_around_you">"Поездки рядом с вами.</string>
     <string name="ongoing_trips">Текущие поездки.</string>
-    <string name="destination_and_schedule">Место назначения и расписание.</string>
-    <string name="trip_details">Детали поездки.</string>
-    <string name="book_now">Забронировать сейчас.</string>
-    <string name="end_trip">Завершить поездку.</string>
+    <string name="destination_and_schedule">Место назначения и расписание</string>
+    <string name="trip_details">Детали поездки</string>
+    <string name="book_now">Забронировать сейчас</string>
+    <string name="end_trip">Завершить поездку</string>
     <string name="from">Откуда</string>
-    <string name="enter_starting_location">Введите начальное местоположение.</string>
+    <string name="enter_starting_location">Введите начальное местоположение</string>
     <string name="where_to">Куда</string>
-    <string name="enter_destination_location">Введите место назначения.</string>
-    <string name="seek_out_trips">Ищите поездки.</string>
+    <string name="enter_destination_location">Введите место назначения</string>
+    <string name="seek_out_trips">Ищите поездки</string>
     <string name="enter_pickup_location">Введите место подачи автомобиля.</string>
     <string name="please_be_on_time_as_we_have_a_tight_schedule">Пожалуйста, будьте вовремя, у нас плотное расписание.</string>
     <string name="verify">Подтвердите</string>
-    <string name="your_code_here">ваш код здесь.</string>
-    <string name="resend">Повторно отправить.</string>
+    <string name="your_code_here">ваш код здесь</string>
+    <string name="resend">Повторно отправить</string>
     <string name="confirm">Подтвердить</string>
     <string name="reset_your_password">Сбросить ваш пароль</string>
     <string name="we_will_send_a_code_to_your_phone_to_reset_your_password">Мы отправим код на ваш телефон для сброса пароля.</string>
@@ -186,11 +186,11 @@
     <string name="choose_date">Выберите дату</string>
     <string name="tc_link">Agree to<a href="">Условия использования</a></string>
     <string name="max_passengers_allowed">Максимальное количество пассажиров составляет %1$s</string>
-    <string name="distanceRange">"Расстояние в (км)"</string>
-    <string name="gender">"Пол"</string>
-    <string name="male">"Мужской"</string>
-    <string name="female">"Женский"</string>
-    <string name="rating">"Рейтинг"</string>
+    <string name="distanceRange">Расстояние в (км)</string>
+    <string name="gender">Пол</string>
+    <string name="male">Мужской</string>
+    <string name="female">Женский</string>
+    <string name="rating">Рейтинг</string>
     <string name="experience_passenger"> Опыт с пассажиром</string>
     <string name="authentication_error">Невозможно аутентифицировать</string>
     <string name="enable_biometric_login">Включить биометрический вход</string>
@@ -287,4 +287,35 @@
     <string name="trip">поездка</string>
     <string name="comment_required">Требуется комментарий</string>
     <string name="select_rating">Пожалуйста, выберите рейтинг</string>
+    <string name="e_g_german">Z.B. Russen</string>
+    <string name="request_rejected">(Запрос отклонён)</string>
+    <string name="restriction_weight_text">Пожалуйста, укажите ограничения по размеру или весу багажа для пассажиров.</string>
+    <string name="hand_carry">Ручная кладь</string>
+    <string name="luggage_weight">Вес (кг)</string>
+    <string name="suitcase">Чемодан</string>
+    <string name="smoking">Курение</string>
+    <string name="pets">Домашние животные</string>
+    <string name="pets_allowed">Разрешены домашние животные</string>
+    <string name="language">Язык</string>
+    <string name="driver">Водитель</string>
+    <string name="remaining_time_more_than_12h">Вы можете начать забирать пассажиров за 12 часов до начала поездки.</string>
+    <string name="alert">Предупреждение</string>
+    <string name="sure_cancel_trip">Вы уверены, что хотите отменить эту поездку? Если вы отмените эту поездку, ваши подтвержденные бронирования также будут возвращены.</string>
+    <string name="pickup_status">Статус посадки</string>
+    <string name="pickup_started">Посадка началась</string>
+    <string name="pickup_started_passenger_details">Водитель начал забирать пассажиров.</string>
+    <string name="get_ready">Будьте готовы</string>
+    <string name="get_ready_passenger_details">Водитель едет, чтобы забрать вас.</string>
+    <string name="pick_up_passenger_details">Водитель отметил, что вы сели. Если это правильно, пожалуйста, отметьте себя как забранного.</string>
+    <string name="not_showed_up_passenger_details">Водитель отметил, что вы не появились. Если это не так, вы можете связаться с поддержкой через страницу настроек.</string>
+    <string name="pick_up_driver_details">Trooute желает вам безопасного путешествия.</string>
+    <string name="not_showed_up_driver_details">Вы были отмечены как не явившийся. Вы можете связаться с поддержкой через страницу настроек.</string>
+    <string name="not_showed_up_by_passenger_details">Пассажир отметил, что вы не появились. Пожалуйста, заберите пассажира.</string>
+    <string name="trip_status_Canceled">Обновить статус поездки на "Отменено"</string>
+    <string name="trip_status_Completed">Обновить статус поездки на "Завершено"</string>
+    <string name="trip_status_INPROGRESS">Обновить статус поездки на "В процессе"</string>
+    <string name="invalid_status">Недействительный статус поездки</string>
+    <string name="connect_stripe_create_account">Вы не можете создать поездку. Вам необходимо подключить ваш аккаунт Stripe, чтобы создать поездку. Когда мы одобрим вас в качестве водителя, мы отправим вам электронное письмо для подключения вашего аккаунта Stripe.</string>
+    <string name="optional">(Необязательно)</string>
+    <string name="you_might_share_the_ride">Вы можете поделить поездку с другими пассажирами, направляющимися в том же направлении.</string>
 </resources>
